@@ -162,7 +162,30 @@ module NewRelic
         end
         d
       end
-      
+      def count_segments
+        children = 0
+        @called_segments.each { | seg | children  += 1 + seg.count_segments } if @called_segments
+        children
+      end
+      # Walk through the tree and truncate the segments
+      def truncate(max)
+        return max unless @called_segments
+        i = 0
+        stop = nil
+        @called_segments.each do | segment |
+          max = segment.truncate(max)
+          max -= 1
+          if max <= 0
+            puts "stop at #{i}, #{max}"
+            @called_segments = @called_segments[0..i]
+            break
+          else
+            i += 1
+          end
+        end
+        max
+      end
+
       def []=(key, value)
         # only create a parameters field if a parameter is set; this will save
         # bandwidth etc as most segments have no parameters
@@ -343,6 +366,7 @@ module NewRelic
       
     end
 
+    attr_accessor :profile
     attr_reader :root_segment
     attr_reader :params
     attr_reader :sample_id
@@ -355,6 +379,12 @@ module NewRelic
       @params[:request_params] = {}
     end
 
+    def count_segments
+      @root_segment.count_segments + 1
+    end
+    def truncate(max)
+      @root_segment.truncate(max-1)
+    end
     # offset from start of app
     def timestamp
       @start_time - @@start_time.to_f
@@ -468,7 +498,8 @@ module NewRelic
       params.each {|k,v| sample.params[k] = v}
         
       delta = build_segment_with_omissions(sample, 0.0, @root_segment, sample.root_segment, regex)
-      sample.root_segment.end_trace(@root_segment.exit_timestamp - delta) 
+      sample.root_segment.end_trace(@root_segment.exit_timestamp - delta)
+      sample.profile = self.profile
       sample.freeze
     end
     
@@ -545,7 +576,6 @@ module NewRelic
     
     def summarize_segments(like_segments)
       if like_segments.length > COLLAPSE_SEGMENTS_THRESHOLD
-        puts "#{like_segments.first.path_string} #{like_segments.length}"
         [CompositeSegment.new(like_segments)]
       else
         like_segments
