@@ -39,7 +39,7 @@ module ActiveRecordFixtures
     has_and_belongs_to_many :orders, :class_name => 'ActiveRecordFixtures::Order'
     def self.setup
       connection.create_table self.table_name, :force => true do |t|
-        t.column :order_id, :integer 
+        # no other columns
       end
       connection.create_table 'orders_shipments', :force => true, :id => false do |t|
         t.column :order_id, :integer 
