@@ -9,7 +9,11 @@
 		<%= link_to "#{sample.params[:uri]}", :action => :show_sample_summary, :id => sample.sample_id %>
 	</td>
 	<td>
+		<% if sample.profile %>
+		<%= link_to "[Profile]", :action => :show_sample_summary, :id => sample.sample_id %>
+		<% else %>
 		<%= link_to "[Detail]", :action => :show_sample_detail, :id => sample.sample_id %>
 		<%= link_to "[SQL (#{sample.sql_segments.size})]", :action => :show_sample_sql, :id => sample.sample_id %>
+		<% end %>
 	</td>
 </tr>
