@@ -67,11 +67,14 @@
 		<%= show_view_link 'SQL', 'show_sample_sql' %>
 	</div>
 	<br/>
-	
+	<% if @sample.profile %>
+	  <%= profile_table(@sample.profile) %> 
+	<% else %>
 	<%= %w[show_sample_summary show_sample_sql show_sample_detail].collect do |p|
 		options = {:align => 'center', :id => p}
 		options[:style] = 'display: none' unless p == params[:action]
 		content_tag('div', render(:partial => p), options)
 	end.join(' ')%>
+	<% end -%>
 
 </div>
